# interview

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  STREAMING_SETUP.md
interviewapis/: API_DOCUMENTATION.md  SUMMARY.md  angular_example.ts  framework.py  main.py  pm.py  pm_case_analysis.txt  pyproject.toml  requirements.txt  schemas.py  test_api.py  test_interview_apis.py
interviewapis/Documentation/: ARCHITECTURE.md  FINAL_DELIVERY.md  MODULAR_AGENTS_README.md  MULTI_AGENT_README.md  START_HERE.md
interviewapis/agents/: __init__.py  api_client.py  architect.py  base_agent.py  behavioral.py  coding.py  interview_client.py  product_manager.py  router.py  supervisor.py  system_design.py  technical.py
interviewapis/database/: models.py  routes.py
interviewweb/: README.md  angular.json  package-lock.json  package.json  temp_qna_template.html
interviewweb/public/answers/architect/: etc-pipeline-architecture.md
interviewweb/public/answers/behavioral/: New Text Document.txt  failure.md
interviewweb/src/: index.html  styles.scss
interviewweb/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
interviewweb/src/app/interview/: interview-routing.module.ts  interview.component.html  interview.component.scss  interview.component.spec.ts  interview.component.ts  interview.module.ts
interviewweb/src/app/interview/add-interview/: add-interview.component.html  (+3 more)
interviewweb/src/assets/data/: architect-patterns.json  behavioral.json  frequent.json  oyr.json  product-cases.json
(+31 files in other folders)
